tests/checker/ok/commutative_param_names_in_body.can
Greeting = String

Name = String

greet = (Greeting * Name) => Name {
    Name
}

main = () => Unit {
    "hello"
        -> Greeting
        .greet("world" -> Name)
    "ok" -> Print
}
