tests/checker/fail/dispatch_arm_wrong_variant.can
main = () => Unit {
    True() -> (
        * False => Unit { "f".print() }
        * None => Unit { "wrong".print() }
    )
}
